localized strings for xslt processing